# ZPLWeb

./: README.md  ZPLWeb.spec  main.py  pyproject.toml  requirements.txt
ZPLWeb/: __init__.py  main.py  utils.py
tests/: test_ack.py  test_main.py  test_single_instance.py  test_utils.py
